Added styled header with deakin logo

--- a/main.css
+++ b/main.css
@@ -16,4 +16,14 @@ p {
   font-family: Arial
 }
 
+.header {
 
+  background-color: darkcyan;
+ 
+  text-align: right;
+ 
+  padding: 10px;
+ 
+ }
+ 
+ 
