--- a/main.css
+++ b/main.css
@@ -1,3 +1,6 @@
+body {
+  background-color: #fcfcfc;
+}
 
 
 h1 {
@@ -28,6 +31,13 @@ td {
 
 tr:nth-child(odd) {
   background-color: #f9f9f9;
+}
+footer {
+  text-align: center;
+  font-style: italic;
+  background-color: #f2f2f2;
+  padding: 10px;
+  margin-top: 30px;
 }
 
 
